attempt #1 in fixing the errors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </table>
       <br>
       <br>
-      <img class="animal" src="animal.jpeg" alt="animal with ears" width="200" height:"150">
+      <img class="animal" src="animal.jpeg" alt="animal with ears" width="200" height="150">
       <script src="script.js"></script>
   </body>
 </html>
